--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -8,17 +8,17 @@
 </head>
 <body>
 
-    <button class="guest-login">Enter as Guest</button>
+    <button class="guest-login">Gastlogin</button>
 
     <div class="container">
         <h2 class="titles">DISLEXIA</h2>
         <form action="#" class="form" method="POST">
-            <input type="email" class="input" placeholder="user@example.com" required/>
-            <input type="password" class="input" placeholder="Password1234" required/>
+            <input type="email" class="input" placeholder="max@mustermann.com" required/>
+            <input type="password" class="input" placeholder="Passwort1234" required/>
             <button class="btn" type="submit">Login</button>
         </form>
         <div class="links">
-            <a href="#">Register</a> | <a href="#">Forgot Password?</a>
+            <a href="#">Registrieren</a> | <a href="#">Passwort vergessen?</a>
         </div>
     </div>
 </body>
