--- a/widgets/new_password/new_password.html
+++ b/widgets/new_password/new_password.html
@@ -12,9 +12,9 @@
 
     <div class="container">
         <h2 class="titles">Passwort zurücksetzen</h2>
-        <form action="#" class="form" method="POST" onsubmit="">
+        <form  class="form"  onclick="email_sent()">
             <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
-            <button class="btn" type="submit" onclick="email_sent()">Senden</button>
+            <button class="btn" type="submit">Senden</button>
         </form>
     </div>
     <div id="email-message" class="message">
@@ -25,17 +25,18 @@
 <script>
     function email_sent() {
         var message = document.getElementById('email-message');
-        message.style
+        message.style.visibility = 'visible';
+        message.style.display = 'block';
         message.style.opacity = '1';
         setTimeout(function() {
             message.style.transition = 'opacity 1s';
             message.style.opacity = '0';
-        }, 4000); // Wait 4 seconds before starting fade out
-        setTimeout(function() {
-            message.style.display = 'none';
-            message.style.opacity = '1';
-            message.style.transition = '';
-        }, 5000); // Hide after fade out
+        }, 3000); // Wait 3 seconds before starting fade out
+        // setTimeout(function() {
+        //     message.style.display = 'none';
+        //     message.style.opacity = '1';
+        //     message.style.transition = '';
+        // }, 4000); 
     }
 
 
