--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -18,7 +18,7 @@
             <button class="btn" type="submit">Login</button>
         </form>
         <div class="links">
-            <a href="#">Registrieren</a> | <a href="#">Passwort vergessen?</a>
+            <a href="#">Registrieren</a> | <a href="../new_password/new_password.html">Passwort vergessen?</a>
         </div>
     </div>
 </body>
