--- a/widgets/new_password/new_password.html
+++ b/widgets/new_password/new_password.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 
-    <button class="back">Zurück</button>
+    <button class="back" onclick="window.location.href='../login/login.html'">Zurück</button>
 
     <div class="container">
         <h2 class="titles">Passwort zurücksetzen</h2>
-        <form  class="form"  onclick="email_sent()">
+        <form  class="form"  onsubmit="email_sent()">
             <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
             <button class="btn" type="submit">Senden</button>
         </form>
@@ -24,7 +24,8 @@
 
 <script>
     function email_sent() {
-        var message = document.getElementById('email-message');
+        event.preventDefault();
+        let message = document.getElementById('email-message');
         message.style.visibility = 'visible';
         message.style.display = 'block';
         message.style.opacity = '1';
@@ -32,11 +33,7 @@
             message.style.transition = 'opacity 1s';
             message.style.opacity = '0';
         }, 3000); // Wait 3 seconds before starting fade out
-        // setTimeout(function() {
-        //     message.style.display = 'none';
-        //     message.style.opacity = '1';
-        //     message.style.transition = '';
-        // }, 4000); 
+
     }
 
 
