update new password

--- a/widgets/new_password/new_password.html
+++ b/widgets/new_password/new_password.html
@@ -32,7 +32,10 @@
         setTimeout(function() {
             message.style.transition = 'opacity 1s';
             message.style.opacity = '0';
-        }, 3000); // Wait 3 seconds before starting fade out
+        }, 2000); // Wait 3 seconds before starting fade out
+        setTimeout(function() {
+            document.location.href = "../login/login.html";
+        }, 3000);
 
     }
 
