connect homescreen but awful

--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -12,9 +12,9 @@
 
     <div class="container">
         <h2 class="titles">DISLEXIA</h2>
-        <form action="#" class="form" method="POST">
-            <input type="email" class="input" placeholder="max@mustermann.com" required/>
-            <input type="password" class="input" placeholder="Passwort1234" required/>
+        <form class="form" onsubmit="send_to_homescreen()"> 
+            <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
+            <input type="password" class="input" value="password" placeholder="Passwort1234" required/>
             <button class="btn" type="submit">Login</button>
         </form>
         <div class="links">
@@ -22,4 +22,9 @@
         </div>
     </div>
 </body>
+<script>
+    function send_to_homescreen() {
+        document.location.href = "../homescreen/homescreen.html";
+    }
+</script>
 </html>
