work on homescreen

--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <button class="guest-login">Gastlogin</button>
+    <button class="guest-login" onclick="send_to_homescreen()">Gastlogin</button>
 
     <div class="container">
         <h2 class="titles">DISLEXIA</h2>
