--- a/widgets/homescreen/homescreen.html
+++ b/widgets/homescreen/homescreen.html
@@ -1,14 +1,19 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DISLEXIA</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="homescreen.css">
 </head>
 <body>
-
-
-    
+    <div class="topbar">
+        <!-- Top bar content here -->
+    </div>
+    <aside class="sidebar">
+        <!-- Sidebar content here -->
+    </aside>
+    <div class="content">
+        <!-- Main content here -->
+    </div>
 </body>
 </html>
