--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -24,6 +24,7 @@
 </body>
 <script>
     function send_to_homescreen() {
+        event.preventDefault();
         document.location.href = "../homescreen/homescreen.html";
     }
 </script>
