--- a/widgets/register/register.html
+++ b/widgets/register/register.html
@@ -27,6 +27,7 @@
 </body>
 <script>
     function send_to_homescreen() {
+        event.preventDefault();
         document.location.href = "../homescreen/homescreen.html";
     }
 </script>
