--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 
 
 <script>
-    document.location.href = "widgets/homescreen/homescreen.html";
+    document.location.href = "widgets/login/login.html";
 </script>
