--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -15,7 +15,7 @@
         <form class="form" onsubmit="send_to_homescreen()"> 
             <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
             <input type="password" class="input" value="password" placeholder="Passwort1234" required/>
-            <button class="btn" type="submit" onclick="send_to_homescreen()">Login</button>
+            <button class="btn" type="submit" >Login</button>
         </form>
         <div class="links">
             <a href="../register/register.html">Registrieren</a> | <a href="../new_password/new_password.html">Passwort vergessen?</a>
