--- a/widgets/register/register.html
+++ b/widgets/register/register.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+    <button class="back" onclick="window.location.href='../login/login.html'">Zurück</button>
+
+
     <div class="container">
         <h2 class="titles">Registrieren</h2>
         <form class="form" onsubmit="send_to_homescreen()"> 
