--- a/widgets/lecture/lecture.html
+++ b/widgets/lecture/lecture.html
@@ -7,17 +7,14 @@
 </head>
 
 <body>
-    Work in progress as you can see. 
-    Aber wenn du kapierst, warum die **** Progressbar nicht funktioniert,
-    ist jede Hilfe willkommen.
-
-    <button class="back-button" onclick="send_to_homescreen()">Zurück</button>
-
-    <div class="progress-container">
-        <div class="progress-bar" id="progress-bar"></div>
+    <div class="progress-bar-container">
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
     </div>
 
 
+    <button class="back-button" onclick="send_to_homescreen()">Zurück</button>
+
     <script src="lecture.js"></script>
 </body>
-
