--- a/widgets/login/login.html
+++ b/widgets/login/login.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h2 class="titles">DISLEXIA</h2>
         <form class="form" onsubmit="send_to_homescreen()"> 
-            <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
-            <input type="password" class="input" value="password" placeholder="Passwort1234" required/>
+            <input type="email" class="input" placeholder="max@mustermann.com" required/>
+            <input type="password" class="input" placeholder="Passwort1234" required/>
             <button class="btn" type="submit" >Login</button>
         </form>
         <div class="links">
