--- a/widgets/new_password/new_password.html
+++ b/widgets/new_password/new_password.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="titles">Passwort zurücksetzen</h2>
         <form  class="form"  onsubmit="email_sent()">
-            <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
+            <input type="email" class="input" placeholder="max@mustermann.com" required/>
             <button class="btn" type="submit">Senden</button>
         </form>
     </div>
@@ -32,7 +32,7 @@
         setTimeout(function() {
             message.style.transition = 'opacity 1s';
             message.style.opacity = '0';
-        }, 2000); // Wait 3 seconds before starting fade out
+        }, 2000); 
         setTimeout(function() {
             document.location.href = "../login/login.html";
         }, 3000);
