--- a/widgets/register/register.html
+++ b/widgets/register/register.html
@@ -15,15 +15,15 @@
         <h2 class="titles">Registrieren</h2>
         <form class="form" onsubmit="send_to_homescreen()"> 
             <label for="fname"><b>Name:</b></label>
-            <input type="text" class="input" value="Max" placeholder="Max" required/>
+            <input type="text" class="input" placeholder="Max" required/>
             <label for="lname"><b>Nachname:</b></label>
-            <input type="text" class="input" value="Mustermann" placeholder="Mustermann" required/>
+            <input type="text" class="input" placeholder="Mustermann" required/>
             <label for="nickname"><b>Benutzername:</b></label>
-            <input type="text" class="input" value="SupaMax" placeholder="SupaMax" required/>
+            <input type="text" class="input" placeholder="SupaMax" required/>
             <label for="email"><b>Email:</b></label>
-            <input type="email" class="input" value="debugging@test.com" placeholder="max@mustermann.com" required/>
+            <input type="email" class="input" placeholder="max@mustermann.com" required/>
             <label for="password"><b>Passwort:</b></label>
-            <input type="password" class="input" value="password" placeholder="Passwort1234" required/>
+            <input type="password" class="input" placeholder="Passwort1234" required/>
             <button class="btn" type="submit"><b>Registrieren</b></button>
         </form>
     </div>
