Fixing Programming Crimes

--- a/widgets/register/register.html
+++ b/widgets/register/register.html
@@ -31,7 +31,7 @@
 <script>
     function send_to_homescreen() {
         event.preventDefault();
-        document.location.href = "../homescreen/homescreen.html";
+        document.location.href = "../login/login.html";
     }
 </script>
 </html>
