--- a/widgets/homescreen/homescreen.html
+++ b/widgets/homescreen/homescreen.html
@@ -26,6 +26,7 @@
         <a href="#">Services</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
+        <a href="../login/login.html">Logout</a>
     </aside>
     <div class="content">
     </div>
