--- a/widgets/homescreen/homescreen.html
+++ b/widgets/homescreen/homescreen.html
@@ -24,7 +24,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">About</a>
         <a href="#">Services</a>
-        <a href="#">Clients</a>
+        <a href="../sidebar/clients.html">Clients</a>
         <a href="#">Contact</a>
         <a href="../login/login.html">Logout</a>
     </aside>
